@@ -90,6 +90,7 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
 53. base/makesalt.c: add missing terminating '$' character for salt
 54. base/mkpasswd.c: allow variable salt size using environment variable
     SALTSIZE
+55. base/makesalt.c: return -1 for insufficient length
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
